# RoyalSecurity

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  launch.bat
.github/workflows/: ci.yml
config/: default.toml
crates/action-executor/: Cargo.toml
crates/action-executor/src/: lib.rs
crates/active-response/: Cargo.toml
crates/active-response/src/: actions.rs  containment.rs  lib.rs  playbooks.rs  quarantine.rs  tests.rs
crates/agent-service/: Cargo.toml
crates/agent-service/src/: lib.rs
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: lib.rs
crates/audit-log/: Cargo.toml
crates/audit-log/src/: lib.rs
crates/automation/: Cargo.toml
crates/automation/src/: lib.rs
crates/collectors/collector-audio/: Cargo.toml
crates/collectors/collector-audio/src/: lib.rs
crates/collectors/collector-bluetooth/: Cargo.toml
crates/collectors/collector-bluetooth/src/: lib.rs
crates/collectors/collector-boot/: Cargo.toml
crates/collectors/collector-boot/src/: lib.rs
crates/collectors/collector-dns/: Cargo.toml
crates/collectors/collector-dns/src/: lib.rs
crates/collectors/collector-email/: Cargo.toml
crates/collectors/collector-email/src/: lib.rs
crates/collectors/collector-etw/: Cargo.toml
crates/collectors/collector-etw/src/: collector.rs  lib.rs  parser.rs  providers.rs
crates/collectors/collector-firmware/: Cargo.toml
crates/collectors/collector-firmware/src/: lib.rs
crates/collectors/collector-hooks/: Cargo.toml
crates/collectors/collector-hooks/src/: lib.rs
crates/collectors/collector-http/: Cargo.toml
crates/collectors/collector-http/src/: lib.rs
crates/collectors/collector-log/: Cargo.toml
crates/collectors/collector-log/src/: lib.rs
crates/collectors/collector-memory/: Cargo.toml
crates/collectors/collector-memory/src/: lib.rs
crates/collectors/collector-powershell/: Cargo.toml
crates/collectors/collector-powershell/src/: lib.rs  prelude.rs
crates/collectors/collector-registry/: Cargo.toml
crates/collectors/collector-registry/src/: lib.rs  prelude.rs
crates/collectors/collector-sysmon/: Cargo.toml
crates/collectors/collector-sysmon/src/: lib.rs  prelude.rs
crates/collectors/collector-usb/: Cargo.toml
crates/collectors/collector-usb/src/: lib.rs  prelude.rs
crates/collectors/collector-usn/: Cargo.toml
crates/collectors/collector-usn/src/: lib.rs  prelude.rs
crates/collectors/collector-webcam/: Cargo.toml
crates/collectors/collector-webcam/src/: lib.rs  prelude.rs
crates/collectors/collector-wfp/: Cargo.toml
crates/collectors/collector-wfp/src/: lib.rs  prelude.rs
crates/collectors/collector-wifi/: Cargo.toml
crates/collectors/collector-wifi/src/: lib.rs  prelude.rs
crates/collectors/collector-wmi/: Cargo.toml
crates/collectors/collector-wmi/src/: lib.rs  (+1 more)
crates/common/: Cargo.toml
crates/common/src/: constants.rs  error.rs  lib.rs  mitre.rs  prelude.rs  types.rs
crates/compliance/: Cargo.toml
crates/compliance/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: arena.rs  audit.rs  bus.rs  config.rs  crypto.rs  engine.rs  hotreload.rs  lib.rs  module.rs  ppl.rs  prelude.rs  processtree.rs  registry.rs  tpm.rs
crates/crypto-vault/: Cargo.toml
crates/crypto-vault/src/: lib.rs  tpm_seal.rs
crates/fleet-management/: Cargo.toml
crates/fleet-management/src/: agent.rs  commands.rs  groups.rs  lib.rs  monitoring.rs  policies.rs  tests.rs
crates/forensic/: Cargo.toml
crates/forensic-triage/: Cargo.toml
crates/forensic-triage/src/: amcache.rs  evtx.rs  lib.rs  lnk.rs  mft.rs  prefetch.rs  registry.rs  shimcache.rs  srum.rs  timeline.rs  usn.rs
crates/forensic/src/: lib.rs  prelude.rs
crates/mitre-attack/: Cargo.toml
crates/mitre-attack/src/: coverage.rs  detections.rs  lib.rs  techniques.rs  tests.rs
crates/network-stack/dns-proxy/: Cargo.toml
crates/network-stack/firewall/: Cargo.toml
crates/network-stack/tls-inspect/: Cargo.toml
crates/network-stack/tor-arti/: Cargo.toml
crates/network-stack/vpn-wireguard/: Cargo.toml
crates/rest-api/: Cargo.toml
crates/rest-api/src/: handlers.rs  lib.rs  middleware.rs  router.rs  tests.rs  types.rs
crates/rule-engine/: Cargo.toml
crates/rule-engine/src/: dsl.rs  engine.rs  lib.rs  prelude.rs  sigma.rs  sigma_engine.rs  yara_engine.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/siem/: Cargo.toml
crates/siem-export/: Cargo.toml
crates/siem-export/src/: cef.rs  csv.rs  ecs.rs  exporter.rs  json.rs  lib.rs  splunk.rs  syslog.rs  tests.rs
crates/siem/src/: lib.rs
crates/state-store/: Cargo.toml
crates/state-store/src/: lib.rs  schema.rs  store.rs
crates/stix-taxii/: Cargo.toml
crates/stix-taxii/src/: converters.rs  lib.rs  stix.rs  taxii.rs  tests.rs
crates/threat-intel/: Cargo.toml
crates/threat-intel/src/: feed.rs  feeds.rs  lib.rs  matcher.rs  mmap_store.rs  prelude.rs  stix.rs  updater.rs
crates/vuln-management/: Cargo.toml
crates/vuln-management/src/: cve.rs  cvss.rs  lib.rs  patch.rs  report.rs  scanner.rs  tests.rs
crates/windows-bridge/: Cargo.toml
crates/windows-bridge/src/: affinity.rs  lib.rs  network.rs  process.rs  registry.rs  system.rs
installer/: build-installer.bat  royalsecurity.iss
royalsecurity-ui/: index.html  package-lock.json  package.json  vite.config.ts
royalsecurity-ui/src/: App.tsx  index.css
royalsecurity-ui/src/components/: NotificationToast.tsx  SetupWizard.tsx
royalsecurity-ui/src/hooks/: useEventStream.ts  useKeyboardShortcuts.ts  useNotifications.ts
royalsecurity-ui/src/lib/: tauri-bridge.ts
royalsecurity-ui/src/pages/: ActiveResponse.tsx  AuditLog.tsx  Compliance.tsx  Dashboard.tsx  Fleet.tsx  Forensics.tsx  Network.tsx  Processes.tsx  Rules.tsx  Settings.tsx  SetupWizard.tsx  SiemExport.tsx  Threats.tsx  VulnScan.tsx
rules/sigma/: suspicious_process_creation.yml
rules/yara/: malware_families.yar  techniques.yar
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+111 files in other folders)
