[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/agent-service",
    "crates/windows-bridge",
    "crates/common",
    "crates/scheduler",
    "crates/rule-engine",
    "crates/threat-intel",
    "crates/stix-taxii",
    "crates/crypto-vault",
    "crates/action-executor",
    "crates/state-store",
    "crates/audit-log",
    "crates/siem",
    "crates/siem-export",
    "crates/automation",
    "crates/ai-engine",
    "crates/compliance",
    "crates/forensic",
    "crates/rest-api",
    "crates/network-stack/firewall",
    "crates/network-stack/dns-proxy",
    "crates/network-stack/tls-inspect",
    "crates/network-stack/vpn-wireguard",
    "crates/network-stack/tor-arti",
    "crates/collectors/collector-etw",
    "crates/collectors/collector-sysmon",
    "crates/collectors/collector-wfp",
    "crates/collectors/collector-hooks",
    "crates/collectors/collector-usn",
    "crates/collectors/collector-wmi",
    "crates/collectors/collector-usb",
    "crates/collectors/collector-bluetooth",
    "crates/collectors/collector-wifi",
    "crates/collectors/collector-dns",
    "crates/collectors/collector-http",
    "crates/collectors/collector-powershell",
    "crates/collectors/collector-registry",
    "crates/collectors/collector-memory",
    "crates/collectors/collector-audio",
    "crates/collectors/collector-webcam",
    "crates/collectors/collector-firmware",
    "crates/collectors/collector-boot",
    "crates/collectors/collector-email",
    "crates/collectors/collector-log",
    "crates/modules/defense/av",
    "crates/modules/defense/behavior",
    "crates/modules/defense/edr",
    "crates/modules/defense/xdr",
    "crates/modules/defense/asr",
    "crates/modules/defense/exploit",
    "crates/modules/defense/memory",
    "crates/modules/defense/fileless",
    "crates/modules/defense/lolbin",
    "crates/modules/defense/ransomware",
    "crates/modules/defense/injection",
    "crates/modules/defense/hijack",
    "crates/modules/defense/credential",
    "crates/modules/defense/persistence",
    "crates/modules/defense/beacon",
    "crates/modules/defense/dga",
    "crates/modules/defense/ja3",
    "crates/modules/defense/cert",
    "crates/modules/defense/yara-scan",
    "crates/modules/defense/rules",
    "crates/modules/defense/hardening",
    "crates/modules/defense/device",
    "crates/modules/defense/firewall",
    "crates/modules/defense/network",
    "crates/modules/defense/dns",
    "crates/modules/defense/wifi",
    "crates/modules/defense/vpn",
    "crates/modules/defense/tor",
    "crates/modules/defense/leak",
    "crates/modules/defense/encryption",
    "crates/modules/defense/fde",
    "crates/modules/defense/dlp",
    "crates/modules/defense/sdelete",
    "crates/modules/defense/backup",
    "crates/modules/defense/itdr",
    "crates/modules/defense/ueba",
    "crates/modules/defense/ad",
    "crates/modules/defense/deception",
    "crates/modules/defense/tpm",
    "crates/modules/defense/boot",
    "crates/modules/defense/vss",
    "crates/modules/defense/hardware",
    "crates/modules/offense/vuln-scan",
    "crates/modules/offense/config-audit",
    "crates/modules/offense/adversary-sim",
    "crates/modules/offense/exploit-validation",
    "crates/modules/privacy/anti-fingerprint",
    "crates/modules/privacy/tracker-block",
    "crates/modules/privacy/metadata-min",
    "crates/modules/privacy/vpn-tor",
    "crates/fleet-management",
    "crates/forensic-triage",
    "crates/active-response",
    "crates/mitre-attack",
    "crates/vuln-management",]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["RoyalSecurity"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/royalsecurity/royalsecurity"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
rmp-serde = "1"

# Error handling
anyhow = "1"
thiserror = "2"
eyre = "0.6"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Crypto
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
rand = "0.8"
ring = "0.17"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Database
redb = "2"

# Windows APIs
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
    "Win32_System_Ioctl",
    "Win32_System_Services",
    "Win32_System_Registry",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_System_Rpc",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_Storage_IscsiDisc",
    "Win32_Devices_Bluetooth",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "ApplicationModel",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_System_EventLog",
] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Scheduler
cron = "0.12"

# Rule engines
yaml-rust2 = "0.9"
regex = "1"

# Network
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
socket2 = "0.5"

# Hashing
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Compression
zstd = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Glob
glob = "0.3"

# Hex
hex = "0.4"

# Base64
base64 = "0.22"

# Hostname
hostname = "0.4"

# Once cell
once_cell = "1"

# Dashmap
dashmap = "6"

# Crossbeam
crossbeam-channel = "0.5"

# Parking lot
parking_lot = "0.12"

# Rayon
rayon = "1.7"

# Aho-Corasick
aho-corasick = "1"

# Enum utilities
strum = "0.26"
strum_macros = "0.26"

# Bloom filter
bloomfilter = "3"

# LRU
lru = "0.12"

# Numeric
num-traits = "0.2"

# ONNX Runtime (ML inference)
# ort = { version = "2", features = ["download-binaries"] }

# Git info for versioning
vergen = { version = "9", features = ["build", "cargo", "rustc"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"

[profile.bench]
opt-level = 3
lto = "thin"

