[package]
name = "royalsecurity"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
royalsecurity-core = { path = "../crates/core" }
royalsecurity-common = { path = "../crates/common" }
royalsecurity-state-store = { path = "../crates/state-store" }
royalsecurity-rule-engine = { path = "../crates/rule-engine" }
royalsecurity-threat-intel = { path = "../crates/threat-intel" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { workspace = true }
hostname.workspace = true
base64.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
