[package]
name = "royalsecurity"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
royalsecurity-core = { path = "../crates/core" }
royalsecurity-common = { path = "../crates/common" }
royalsecurity-state-store = { path = "../crates/state-store" }
royalsecurity-rule-engine = { path = "../crates/rule-engine" }
royalsecurity-threat-intel = { path = "../crates/threat-intel" }
royalsecurity-crypto-vault = { path = "../crates/crypto-vault" }
royalsecurity-siem = { path = "../crates/siem" }
royalsecurity-compliance = { path = "../crates/compliance" }
royalsecurity-forensic = { path = "../crates/forensic" }
windows-bridge = { path = "../crates/windows-bridge" }
royalsecurity-agent-service = { path = "../crates/agent-service" }
royalsecurity-forensic-triage = { path = "../crates/forensic-triage" }
royalsecurity-rest-api = { path = "../crates/rest-api" }
royalsecurity-siem-export = { path = "../crates/siem-export" }
royalsecurity-fleet-management = { path = "../crates/fleet-management" }
royalsecurity-active-response = { path = "../crates/active-response" }
royalsecurity-mitre-attack = { path = "../crates/mitre-attack" }
royalsecurity-stix-taxii = { path = "../crates/stix-taxii" }
royalsecurity-vuln-management = { path = "../crates/vuln-management" }
royalsecurity-collector-etw = { path = "../crates/collectors/collector-etw" }
royalsecurity-collector-sysmon = { path = "../crates/collectors/collector-sysmon" }
royalsecurity-collector-log = { path = "../crates/collectors/collector-log" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { workspace = true }
hostname.workspace = true
base64.workspace = true
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
yaml-rust2 = "0.9"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
