[package]
name = "royalsecurity-active-response"
version = "0.1.0"
edition = "2021"

[dependencies]
royalsecurity-common = { path = "../common" }
royalsecurity-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha3 = "0.10"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading"] }
