[package]
name = "royalsecurity-agent-service"
version.workspace = true
edition.workspace = true
description = "Windows service wrapper for RoyalSecurity agent"
license.workspace = true

[dependencies]
royalsecurity-core = { path = '../core' }
royalsecurity-common = { path = '../common' }
royalsecurity-state-store = { path = '../state-store' }
royalsecurity-audit-log = { path = '../audit-log' }
royalsecurity-crypto-vault = { path = '../crypto-vault' }
royalsecurity-rule-engine = { path = '../rule-engine' }
royalsecurity-threat-intel = { path = '../threat-intel' }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
windows = { workspace = true, features = [
    "Win32_System_Services",
    "Win32_System_Threading",
] }
windows-sys = { version = "0.59", features = [
    "Win32_System_Services",
    "Win32_System_Threading",
] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true