[package]
name = "royalsecurity-ai-engine"
version.workspace = true
edition.workspace = true
description = "ONNX inference, feature engineering, anomaly detection, UEBA"
license.workspace = true

[dependencies]
royalsecurity-core = { path = '../core' }
royalsecurity-common = { path = '../common' }
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
rayon.workspace = true
chrono.workspace = true
uuid.workspace = true
