[package]
name = "royalsecurity-audit-log"
version.workspace = true
edition.workspace = true
description = "Production-grade immutable hash-chained audit log with WAL, ring buffer, and batch writes"
license.workspace = true

[dependencies]
royalsecurity-core = { path = '../core' }
royalsecurity-common = { path = '../common' }
tracing.workspace = true
sha3.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
