[package]
name = "royalsecurity-automation"
version.workspace = true
edition.workspace = true
description = "SOAR engine, playbooks, workflow builder, HTTP actions"
license.workspace = true

[dependencies]
royalsecurity-core = { path = '../core' }
royalsecurity-common = { path = '../common' }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

