[package]
name = "royalsecurity-core"
version.workspace = true
edition.workspace = true
description = "Event bus, plugin system, config, crypto vault, audit log"
license.workspace = true

[dependencies]
royalsecurity-common = { path = '../common' }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
figment.workspace = true
toml.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
sha2.workspace = true
sha3.workspace = true
rand.workspace = true
windows = { workspace = true }
