[package]
name = "royalsecurity-fleet-management"
version = "0.1.0"
edition = "2021"

[dependencies]
royalsecurity-common = { path = "../common" }
royalsecurity-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dashmap = "6"
