[package]
name = "royalsecurity-forensic-triage"
version = "0.1.0"
edition = "2021"
description = "Windows forensic artifact parsing comparable to Velociraptor, Hayabusa, Chainsaw, and KAPE"

[dependencies]
royalsecurity-common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
regex = "1"
yaml-rust2 = "0.9"
thiserror = "2"
hostname = "0.4"
