[package]
name = "royalsecurity-forensic"
version.workspace = true
edition.workspace = true
description = "MFT, prefetch, registry, EVTX, timeline, PCAP parsers"
license.workspace = true

[dependencies]
royalsecurity-core = { path = '../core' }
royalsecurity-common = { path = '../common' }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
