[package]
name = "royalsecurity-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
royalsecurity-common = { path = "../common" }
royalsecurity-core = { path = "../core" }
royalsecurity-rule-engine = { path = "../rule-engine" }
royalsecurity-threat-intel = { path = "../threat-intel" }
royalsecurity-audit-log = { path = "../audit-log" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
hostname = "0.4"
