[package]
name = "royalsecurity-rule-engine"
version.workspace = true
edition.workspace = true
description = "Sigma rule parser + YARA integration + streaming evaluator"
license.workspace = true

[dependencies]
royalsecurity-core = { path = '../core' }
royalsecurity-common = { path = '../common' }
tokio.workspace = true
yaml-rust2.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
aho-corasick.workspace = true


uuid.workspace = true
