[package]
name = "royalsecurity-siem-export"
version = "0.1.0"
edition = "2021"

[dependencies]
royalsecurity-common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hostname = "0.4"
