[package]
name = "royalsecurity-state-store"
version.workspace = true
edition.workspace = true
description = "Embedded database: redb + SQLite export + Parquet export"
license.workspace = true

[dependencies]
royalsecurity-core = { path = '../core' }
royalsecurity-common = { path = '../common' }
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bincode.workspace = true

