[package]
name = "royalsecurity-vuln-management"
version = "0.1.0"
edition = "2021"
description = "Vulnerability scanning and management engine comparable to Tenable Nessus, Qualys VMDR, and Rapid7 InsightVM"

[dependencies]
royalsecurity-common = { path = "../common" }
royalsecurity-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
