[package]
name = "windows-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows API bridge for RoyalSecurity collectors and modules"

[dependencies]
royalsecurity-common = { path = '../common' }
windows.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
once_cell = "1"
