[package]
name = "royalsecurity-collector-etw"
version.workspace = true
edition.workspace = true
description = "Telemetry collector: collector-etw"
license.workspace = true

[dependencies]
royalsecurity-core = { path = "../../core" }
royalsecurity-common = { path = "../../common" }
windows.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
chrono.workspace = true

